--- a/src/templates/pagina_inicial.html
+++ b/src/templates/pagina_inicial.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
     <title>Agenda</title>
 </head>
 <body>
     <div id="menus"> 
-        <h5 class="menu_dia">Casa</h5>
-        <h5 class="menu_dia">Serviço</h5>   
+        <h5 class="menu_dia" >Casa</h5>
+        <h5 class="menu_dia" >Serviço</h5>   
+        <h1 style="position:absolute;text-align:center;left:45%;margin-top:15px;">Agenda</h1>
     </div>
-    <div style="margin:0 auto;"><h1 >Agenda</h1></div>
+   <section>
+        <p>Tarefa Concluida</p>
+        <input type="checkbox">
+   </section>
     
     
 </body>
