--- a/src/templates/pagina_inicial.html
+++ b/src/templates/pagina_inicial.html
@@ -13,9 +13,29 @@
         <h5 class="menu_dia" >Serviço</h5>   
         <h1 style="position:absolute;text-align:center;left:45%;margin-top:15px;">Agenda</h1>
     </div>
-   <section>
-        <p>Tarefa Concluida</p>
-        <input type="checkbox">
+    
+    <section>
+        <div id="headDiaSemana">
+        
+            <p>Segunda</p>
+            <p>Terça</p>
+            <p>Quarta</p>
+            <p>Quinta</p>
+            <p>Sexta</p>
+            <p>Sabado</p>
+            <p>Domingo</p>
+            
+            
+        </div>
+        <hr><br>
+        <div class="check">
+            <div>
+                <p>Checkin</p>
+                <input type="checkbox" class="checkbox">
+            </div>
+           
+        </div>
+        
    </section>
     
     
